language/move-lang/tests/move_check/typing/module_call_explicit_type_arguments.exp
error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments.move:2:33 ───
   │
 2 │       fun foo<T, U>(_x: T, _y: U) {
   │ ╭─────────────────────────────────^
 3 │ │     }
   │ ╰─────^ Invalid return
   ·
 2 │     fun foo<T, U>(_x: T, _y: U) {
   │                   -- The parameter '_x' might still contain a resource value. The resource must be consumed before the function returns
   │

error: 

   ┌── tests/move_check/typing/module_call_explicit_type_arguments.move:2:33 ───
   │
 2 │       fun foo<T, U>(_x: T, _y: U) {
   │ ╭─────────────────────────────────^
 3 │ │     }
   │ ╰─────^ Invalid return
   ·
 2 │     fun foo<T, U>(_x: T, _y: U) {
   │                          -- The parameter '_y' might still contain a resource value. The resource must be consumed before the function returns
   │

